syntax="proto3";

package job;

option go_package="./pb/user/";

service Jobservice{
    rpc GetJobsSkills(req) returns (res) {};
    rpc GetFreelancerPaypalEmail(Preq) returns (Pres) {};
}

message Preq{
    int32 userID = 1;
}

message Pres{
    string Email = 1;
    int32 status = 2;
    string Error = 3;
}

message req {
    repeated int64 skill = 1;
}

message res {
    repeated string skill = 1;
}

